--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,15 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
+	<meta name='description' content='Marcial Cambronero | Frontend Engineer'>
 
 	<title>Marcial Cambronero | Frontend Engineer</title>
-
+	
 	<link rel='icon' type='image/png' href='/favicon.ico'>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 
 	<script defer src='/build/bundle.js'></script>
 </head>
